# codeit-sprint

./: README.md
sprint11/: 11_3팀_백예나.ipynb  [스프린트미션]11_한영_번역_Seq2Seq_Attention_Transformer.ipynb
sprint13/: 13_3팀_백예나.ipynb
sprint14/: 14_3팀_백예나.ipynb
sprint15/researcher1/: Dockerfile  eda_modeling.ipynb  train.py
sprint15/researcher2/: docker-compose.yml  inference.ipynb  requirements.txt  test.md
sprint16/: 09_5팀_백예나.ipynb  inference.ipynb  modeling.ipynb
sprint16/model/: mission_16_cgan_disc_full.pth  mission_16_cgan_gen.onnx  mission_16_cgan_gen.pth  mission_16_cgan_gen_full.pth  mission_16_cgan_gen_quantized.pth
sprint17/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
sprint17/utils/: download_model.py  onnx_runtime.py  path.py  preprocess.py
sprint18/: .dockerignore  docker-compose.yml  pyproject.toml
sprint18/backend/: main.py  requirements.txt
sprint18/backend/model/: base_mixin.py  database.py  models.py  movie.db
sprint18/backend/routers/: movie.py  review.py
sprint18/backend/schemas/: movie.py  pagination.py  response.py  review.py
sprint18/backend/sentiment/: analyzer.py
sprint18/backend/services/: movie_service.py  review_service.py
sprint18/backend/utils/: exception_handler.py  pagination.py  response.py
sprint18/backend/utils/enums/: sentiment_enum.py
sprint18/frontend/: Dockerfile  app.py  requirements.txt
sprint18/frontend/pages/: movie_list.py  movie_write.py
sprint18/frontend/utils/: api.py  constants.py
sprint3/: main.py  pyproject.toml  자전거 대여 시스템 데이터 분석.docx
sprint4/: 미션4_1팀_백예나.ipynb
(+1 files in other folders)
