[project]
name = "sprint18"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.1",
    "minio>=7.2.18",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
